--- a/src/app/business/pages/hotbed-tracking/hotbed-tracking.component.html
+++ b/src/app/business/pages/hotbed-tracking/hotbed-tracking.component.html
@@ -9,7 +9,7 @@
                         <button
                             pButton
                             pRipple
-                            label="Registrar un nuevo artículo"
+                            label="nuevo artículo"
                             icon="pi pi-plus"
                             class="mr-2"
                             (click)="goToRegisterHotbed()"
@@ -64,7 +64,7 @@
                             <div
                                 class="flex flex-column md:flex-row md:justify-content-between md:align-items-center"
                             >
-                                <h5 class="m-0">Seguimiento de asesorías</h5>
+                                <h5 class="m-0">Seguimiento de artículos</h5>
                                 <span
                                     class="block mt-2 md:mt-0 p-input-icon-left"
                                 >
@@ -264,7 +264,7 @@
             </div>
             <div class="card flex justify-content-center col-12">
                 <h5
-                    class="font-bold"
+                    class="font-bold text-color"
                     style="font-family: revert; text-align: center"
                 >
                     {{ articleSelected.title }}
