--- a/src/app/business/pages/thesis-review-tracking/thesis-review-tracking.component.html
+++ b/src/app/business/pages/thesis-review-tracking/thesis-review-tracking.component.html
@@ -46,7 +46,9 @@
                             <div
                                 class="flex flex-column md:flex-row md:justify-content-between md:align-items-center"
                             >
-                                <h5 class="m-0">Seguimiento de asesorías</h5>
+                                <h5 class="m-0">
+                                    Seguimiento de inscripciones
+                                </h5>
                                 <span
                                     class="block mt-2 md:mt-0 p-input-icon-left"
                                 >
@@ -72,9 +74,9 @@
                                         field="thesis_project_title"
                                     ></p-sortIcon>
                                 </th>
-                                <th pSortableColumn="nombre" style="width: 20%">
-                                    Asesor
-                                    <p-sorIcon field="nombre"></p-sorIcon>
+                                <th pSortableColumn="name" style="width: 20%">
+                                    Revisor
+                                    <p-sortIcon field="status"></p-sortIcon>
                                 </th>
                                 <th style="width: 10%">Estado</th>
                                 <th style="width: 10%"></th>
@@ -92,14 +94,15 @@
                                     }}
                                 </td>
                                 <td style="width: 14%; min-width: 8rem">
+                                    <span class="p-column-title">Revisor</span>
                                     <div *ngIf="data.reviewer.length < 1">
                                         sin asignar
                                     </div>
-                                    <div *ngIf="data.reviewer.length > 0">
+                                    <div *ngIf="data.reviewer.name">
                                         {{
-                                            data.reviewer[0].name +
+                                            data.reviewer.name +
                                                 " " +
-                                                data.reviewer[0].surnames
+                                                data.reviewer.surnames
                                         }}
                                     </div>
                                 </td>
@@ -112,8 +115,9 @@
                                                 ? data.status.toLowerCase()
                                                 : '')
                                         "
-                                        >{{ data.status }}</span
                                     >
+                                        {{ data.status }}
+                                    </span>
                                 </td>
                                 <td>
                                     <div class="flex">
@@ -127,7 +131,7 @@
                                         />
 
                                         <!-- <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editProduct(product)"></button>
-                                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button> -->
+                                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button> -->
                                     </div>
                                 </td>
                             </tr>
@@ -218,7 +222,7 @@
                             advisoryState !== 'Aprobado' &&
                             !showEdit
                         "
-                        label="Cancelar asesoría"
+                        label="Cancelar revisión"
                         [outlined]="true"
                         class="mr-3"
                         icon="pi pi-times"
@@ -228,7 +232,7 @@
                     />
                     <p-button
                         *ngIf="
-                            (advisoryState === 'En Asesoría' ||
+                            (advisoryState === 'Revisión de Tesis' ||
                                 advisoryState === 'Observado') &&
                             !showEdit
                         "
@@ -325,8 +329,8 @@
                     <div class="card col-12 col-md-3" style="max-height: 100px">
                         <p class="font-bold">Estado:</p>
                         <p-tag
-                            *ngIf="advisoryState === 'En Asesoría'"
-                            value="En asesoría"
+                            *ngIf="advisoryState === 'Revisión de Tesis'"
+                            value="En revisión de tesis"
                         />
                         <p-tag
                             *ngIf="advisoryState === 'En Revisión'"
@@ -447,8 +451,8 @@
                     <div class="card col-12 col-md-3" style="max-height: 100px">
                         <p class="font-bold">Estado:</p>
                         <p-tag
-                            *ngIf="advisoryState === 'En Asesoría'"
-                            value="En asesoría"
+                            *ngIf="advisoryState === 'En Revisión de Tesis'"
+                            value="En revisión de tesis"
                         />
                         <p-tag
                             *ngIf="advisoryState === 'En revisión'"
@@ -553,21 +557,21 @@
             </form>
             <div class="ml-2 mr-2 separator"></div>
             <div class="grid col-12">
-                <div class="col-12 col-md-6">
+                <div class="col-6">
                     <div>
                         <p>Asesor de tesis</p>
                         <app-user-selection
                             #userSelection
                             [typeUserList]="reviewerType"
                             maxUsersAllow="1"
-                            [usersPreSelected]="advisory.value"
+                            [usersPreSelected]="[advisory.value]"
                             (userSelected)="getTeacherSelected($event)"
                             [disabled]="!showEdit"
                         >
                         </app-user-selection>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-6">
                     <div>
                         <p>Estudiante(s)</p>
                         <app-user-selection
@@ -585,24 +589,6 @@
 
             <div class="ml-2 mr-2 separator"></div>
             <div class="grid col-12">
-                <app-task-list
-                    class="full-width"
-                    [idModule]="advisorySelected.id"
-                    [module]="module"
-                    [visible]="
-                        advisoryState !== 'Renuncia' &&
-                        advisoryState !== 'Aprobado'
-                            ? true
-                            : false
-                    "
-                    [chbDisable]="
-                        advisoryState !== 'Renuncia' &&
-                        advisoryState !== 'Aprobado'
-                            ? false
-                            : true
-                    "
-                ></app-task-list>
-                <div class="ml-2 mr-2 separator"></div>
                 <app-file-list
                     class="w-full"
                     [module]="module"
@@ -689,139 +675,6 @@
                     </p>
                 </div>
             </div>
-            <form [formGroup]="moreInfoForm">
-                <div class="grid col-12">
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">
-                            Fecha de recepción de la asesoría a Facultad:
-                        </p>
-                        <div class="grid p-fluid">
-                            <div class="field col-12 md:col-12">
-                                <p-calendar
-                                    formControlName="advisoryReceptionDateToFacultyMI"
-                                    placeholder="Seleccione una fecha"
-                                    [iconDisplay]="'input'"
-                                    class="full-width"
-                                    [showIcon]="true"
-                                    dateFormat="dd-mm-yy"
-                                    inputId="icondisplay"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">
-                            Fecha de aprobación a asesoría UDI:
-                        </p>
-                        <div class="grid p-fluid">
-                            <div class="field col-12 md:col-12">
-                                <p-calendar
-                                    formControlName="advisoryApprovalDateUDIMI"
-                                    placeholder="Seleccione una fecha"
-                                    [iconDisplay]="'input'"
-                                    class="full-width"
-                                    [showIcon]="true"
-                                    dateFormat="dd-mm-yy"
-                                    inputId="icondisplay"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">Fecha de pago:</p>
-                        <div class="grid p-fluid">
-                            <div class="field col-12 md:col-12">
-                                <p-calendar
-                                    formControlName="paymentDateMI"
-                                    placeholder="Seleccione una fecha"
-                                    [iconDisplay]="'input'"
-                                    class="full-width"
-                                    [showIcon]="true"
-                                    dateFormat="dd-mm-yy"
-                                    inputId="icondisplay"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">Fecha de envío a secretaría:</p>
-                        <div class="grid p-fluid">
-                            <div class="field col-12 md:col-12">
-                                <p-calendar
-                                    formControlName="submissionDateToSecretariatMI"
-                                    placeholder="Seleccione una fecha"
-                                    [iconDisplay]="'input'"
-                                    class="full-width"
-                                    [showIcon]="true"
-                                    dateFormat="dd-mm-yy"
-                                    inputId="icondisplay"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid col-12">
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">Nro de informe:</p>
-                        <input
-                            formControlName="reportNumberMI"
-                            type="text"
-                            pInputText
-                            placeholder="Complete la información"
-                            class="full-width"
-                        />
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">Fecha de resolución:</p>
-                        <div class="grid p-fluid">
-                            <div class="field col-12 md:col-12">
-                                <p-calendar
-                                    formControlName="resolutionDateMI"
-                                    placeholder="Seleccione una fecha"
-                                    [iconDisplay]="'input'"
-                                    class="full-width"
-                                    [showIcon]="true"
-                                    dateFormat="dd-mm-yy"
-                                    inputId="icondisplay"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">Inicio de asesoría:</p>
-                        <div class="grid p-fluid">
-                            <div class="field col-12 md:col-12">
-                                <p-calendar
-                                    formControlName="advisoryStartDate"
-                                    placeholder="Seleccione una fecha"
-                                    [iconDisplay]="'input'"
-                                    class="full-width"
-                                    [showIcon]="true"
-                                    dateFormat="dd-mm-yy"
-                                    inputId="icondisplay"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <p class="font-bold">Fin de asesoría:</p>
-                        <div class="grid p-fluid">
-                            <div class="field col-12 md:col-12">
-                                <p-calendar
-                                    formControlName="advisoryEndDate"
-                                    placeholder="Seleccione una fecha"
-                                    [iconDisplay]="'input'"
-                                    class="full-width"
-                                    [showIcon]="true"
-                                    dateFormat="dd-mm-yy"
-                                    inputId="icondisplay"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-
             <div class="ml-2 mr-2 separator"></div>
             <div class="grid col-12">
                 <div class="col-12">
